# String-Parsing-Library

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml
header/: StringParser.hpp
source/: StringParser.cpp
test/: SeperateStringTest.cpp
